# book-reader-ai

./: .dockerignore  .gitignore  CLAUDE.md  README.md  mkdocs.yml  railway.json  requirements-docs.txt
.githooks/: pre-push
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: architecture.md
.github/scripts/: watch-pr.sh
.github/workflows/: auto-close-issues.yml  auto-merge.yml  ci.yml  coverage-nightly.yml  docs-journal.yml  docs.yml  ios-release.yml  smoke-test.yml
backend/: .dockerignore  .env.example  Dockerfile  books.db  free_classics.json  main.py  popular_books.json  pytest.ini  requirements.txt
backend/migrations/: 001_initial_schema.sql  002_add_book_images.sql  003_create_audio_cache.sql  004_user_roles_and_approval.sql  005_add_github_id.sql  006_add_apple_id.sql  006_bulk_translation_jobs.sql  007_translation_provider_info.sql  008_translation_queue.sql  (+27 more)
docs/: FEATURES.md  design-epub-ingestion.md  design-improvement-plan.md  index.md  reader-interaction-design.md  workflow-startup.md
extension/: manifest.json
frontend/: .env.example  capacitor.config.ts  ios-setup.md  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.tsbuildinfo
reports/: ci_baseline_2026_04_24.md  epub_split_audit_2026_04_24.md  epub_split_audit_2026_04_24_post_backfill.md  epub_split_audit_after_888_fix.md  pretranslate_benchmark_2229.md
scripts/: backfill_epubs.py  benchmark_pretranslate.py  pretranslate.py  requirements-pretranslate.txt  start-roles.sh
src-tauri/: Cargo.toml  tauri.conf.json
(+621 files in other folders)
